[ui] Add historical data
